--- a/src/config/translation/locales/en_US.json
+++ b/src/config/translation/locales/en_US.json
@@ -468,7 +468,7 @@
   "page.resetPassSubTitle": "Reset Password",
   "page.resetPassDescription": "Enter new password and confirm it.",
   "page.resetPassSave": "Save",
-  "page.signInTitle": "Isomorphic",
+  "page.signInTitle": "ComerApp",
   "page.signInRememberMe": "Remember me",
   "page.signInButton": "Sign in",
   "page.signInPreview": "username: demo   password: demodemo   or just click on any button.",
